<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.wanxio.wanxio.aroce.PracticeFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewLK"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="@color/textViewNormal"
                android:padding="1dp"
                android:text="@string/fragment_practice_lk" />

            <TextView
                android:id="@+id/textViewSchedule"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="@color/textViewNormal"
                android:padding="1dp"
                android:text="@string/fragment_practice_schedule"
                android:textAlignment="viewEnd" />
        </LinearLayout>

        <TextView
            android:id="@+id/textViewQuestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:background="@color/textViewNormal"
            android:minHeight="50dp"
            android:padding="1dp"
            android:text="@string/fragment_practice_question_show_here"
            android:textAlignment="textStart" />

        <ImageView
            android:id="@+id/imageViewPic"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_marginBottom="7dp"
            android:contentDescription="@string/fragment_practice_image_show_here"
            android:padding="1dp"
            android:scaleType="fitCenter" />

        <Button
            android:id="@+id/buttonAnsA"
            style="@style/buttonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fragment_practice_answer_a"
            android:textAlignment="textStart" />

        <Button
            android:id="@+id/buttonAnsB"
            style="@style/buttonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fragment_practice_answer_b"
            android:textAlignment="textStart" />

        <Button
            android:id="@+id/buttonAnsC"
            style="@style/buttonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fragment_practice_answer_c"
            android:textAlignment="textStart" />

        <Button
            android:id="@+id/buttonAnsD"
            style="@style/buttonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fragment_practice_answer_d"
            android:textAlignment="textStart" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonForward"
                style="@style/buttonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/fragment_practice_button_forward" />

            <Button
                android:id="@+id/buttonAfterward"
                style="@style/buttonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/fragment_practice_button_afterward" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>
